ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Gala2017__c/Gala2017__c.object-meta.xml
<CustomObject>
    <description>Data from Greater Giving for Gala 2017.</description>
    <label>Gala2017</label>
    <nameField>
        <displayFormat>Gala17-{00000}</displayFormat>
        <label>Gala2017 Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gala2017</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>