ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Gala2017__c/fields/Address1__c.field-meta.xml
<CustomField>
    <fullName>Address1__c</fullName>
    <label>Address1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>