ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Gala2017__c/fields/Address2__c.field-meta.xml
<CustomField>
    <fullName>Address2__c</fullName>
    <label>Address2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>