ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Gala2017__c/fields/Card_Reference__c.field-meta.xml
<CustomField>
    <fullName>Card_Reference__c</fullName>
    <label>Card Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>