ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Gala2017__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Gala2017</relationshipLabel>
    <relationshipName>Gala2017</relationshipName>
    <type>Lookup</type>
</CustomField>