ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Gala2017__c/fields/Fully_Paid__c.field-meta.xml
<CustomField>
    <fullName>Fully_Paid__c</fullName>
    <label>Fully Paid</label>
    <length>5</length>
    <type>Text</type>
</CustomField>