ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Gala2017__c/fields/Gift_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gift_Amount__c</fullName>
    <label>Gift Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>