ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Gala2017__c/fields/Gift_Name__c.field-meta.xml
<CustomField>
    <fullName>Gift_Name__c</fullName>
    <label>Gift Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>