ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Gala2017__c/fields/Gift_Type__c.field-meta.xml
<CustomField>
    <fullName>Gift_Type__c</fullName>
    <label>Gift Type</label>
    <length>120</length>
    <type>Text</type>
</CustomField>