ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Gala2017__c/fields/HomePhone__c.field-meta.xml
<CustomField>
    <fullName>HomePhone__c</fullName>
    <label>HomePhone</label>
    <type>Phone</type>
</CustomField>