ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Gala2017__c/fields/NOTES__c.field-meta.xml
<CustomField>
    <fullName>NOTES__c</fullName>
    <label>NOTES</label>
    <length>250</length>
    <type>Text</type>
</CustomField>