ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Gala2017__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Gala2017</relationshipLabel>
    <relationshipName>Gala2017</relationshipName>
    <type>Lookup</type>
</CustomField>