ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Gala2017__c/fields/Pay_Type__c.field-meta.xml
<CustomField>
    <fullName>Pay_Type__c</fullName>
    <label>Pay Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>