ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Gala2017__c/fields/SupporterID__c.field-meta.xml
<CustomField>
    <fullName>SupporterID__c</fullName>
    <externalId>true</externalId>
    <label>SupporterID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>