ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Gala2017__c/fields/Value_Return__c.field-meta.xml
<CustomField>
    <fullName>Value_Return__c</fullName>
    <label>Value Returned</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>