ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Gala2017__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Address1__c</columns>
    <columns>Gift_Name__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>