ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Gala2017__c/listViews/Gala17_wo_Contact.listView-meta.xml
<ListView>
    <fullName>Gala17_wo_Contact</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Address1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact_Name__c</field>
        <operation>equals</operation>
    </filters>
    <label>Gala17 wo Contact</label>
</ListView>